--- a/drivers/leds/Makefile
+++ b/drivers/leds/Makefile
@@ -39,6 +39,7 @@ obj-$(CONFIG_LEDS_ADP5520)		+= leds-adp5520.o
 obj-$(CONFIG_LEDS_DELL_NETBOOKS)	+= dell-led.o
 obj-$(CONFIG_LEDS_MC13783)		+= leds-mc13783.o
 obj-$(CONFIG_LEDS_MXS)			+= leds-mxs-pwm.o
+obj-$(CONFIG_LEDS_MXS_BEEPER)	+= leds-mxs-beeper.o
 
 # LED SPI Drivers
 obj-$(CONFIG_LEDS_DAC124S085)		+= leds-dac124s085.o
