Update g2h-4 defconfig to include dip switch driver
Signed-off-by: Jeff Horn <jeff@everlook.net>

--- a/arch/arm/configs/g2h-4_defconfig
+++ b/arch/arm/configs/g2h-4_defconfig
@@ -99,6 +99,7 @@ CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=65536
+CONFIG_G2H_DIP=y
 CONFIG_EEPROM_AT24=y
 CONFIG_EEPROM_AT25=y
 CONFIG_SCSI=y
